# python

./: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py  start_gradio.sh  大模型学习-day1.ipynb  大模型学习-day2.ipynb
.github/workflows/: ci-cd.yml
config/: logging_demo.json  settings.py
docs/: Cursor配置指南.md  pip_mirrors.md  项目使用指南.md
migrations/: env.py
scripts/: check-status.sh  deploy-staging-ansible.yml  deploy-staging-k8s.sh  deploy-staging.sh  deploy.sh  init-db.sql  init-github.sh  start.sh  start_gradio.sh  start_llm_demo.sh  start_logging_demo.sh
src/: __init__.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: __init__.py  health.py
src/apps/: __init__.py  gradio_demo.py  llm_app_demo.py  logging_demo.py  testapp_app.py
src/core/: __init__.py  app_manager.py  base_app.py  cache.py  config.py  database.py  logging.py  security.py
src/demos/: __init__.py  example_with_logging.py  helloworld.py  import_examples.py
src/models/: __init__.py  base.py
src/utils/: __init__.py  logger_utils.py
tests/: __init__.py  test.py  test_app_manager.py  test_basic.py  test_logging_demo.py
~/.pip/: pip.conf
